--- a/.travis.yml
+++ b/.travis.yml
@@ -147,9 +147,19 @@ matrix:
 
     - os: osx
       osx_image: xcode8.3
+      env: CMAKE_OPTIONS=-DCMAKE_CXX_STANDARD=11
+
+    - os: osx
+      osx_image: xcode8.3
+      env: CMAKE_OPTIONS=-DCMAKE_CXX_STANDARD=14
 
     - os: osx
       osx_image: xcode8
+      env: CMAKE_OPTIONS=-DCMAKE_CXX_STANDARD=11
+
+    - os: osx
+      osx_image: xcode8
+      env: CMAKE_OPTIONS=-DCMAKE_CXX_STANDARD=14
 
     - os: osx
       osx_image: xcode7.3
